plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.16'
	id 'io.spring.dependency-management' version '1.1.7'
	// B-020: 코드 스타일 자동화(Naver 핵데이 컨벤션). checkstyle 은 코어 플러그인(버전 불요).
	id 'checkstyle'
	id 'com.diffplug.spotless' version '6.25.0'
}

group = 'com.finalcall'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-web'
	// Stage 2: @ConfigurationProperties 의 @Validated/@NotBlank 검증을 실제 동작시키기 위한 Bean Validation
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	// Stage 4: 구조화 로깅 + 분산추적
	implementation 'org.springframework.boot:spring-boot-starter-actuator'   // 트레이싱 활성화 기반(엔드포인트 노출은 Stage 5)
	implementation 'org.springframework.boot:spring-boot-starter-aop'        // @ServiceLog AOP
	implementation 'io.micrometer:micrometer-tracing-bridge-otel'            // traceId/spanId 생성·MDC 주입·전파(버전은 BOM 관리)
	implementation 'net.logstash.logback:logstash-logback-encoder:8.1'       // dev/prod JSON 로그 인코더
	// [INCLUDE_TRACE_EXPORT=false] span export 안 함 → opentelemetry-exporter-otlp 미추가(자리만)
	// Stage 5: Prometheus 메트릭 노출(/actuator/prometheus). 버전은 BOM 관리.
	runtimeOnly 'io.micrometer:micrometer-registry-prometheus'
	// Stage D: 데이터 계층(JPA + QueryDSL + Flyway)
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	runtimeOnly 'com.mysql:mysql-connector-j'
	// QueryDSL — 반드시 jakarta 분류자(javax 딸려오지 않게)
	implementation 'com.querydsl:querydsl-jpa:5.1.0:jakarta'
	annotationProcessor 'com.querydsl:querydsl-apt:5.1.0:jakarta'
	annotationProcessor 'jakarta.annotation:jakarta.annotation-api'
	annotationProcessor 'jakarta.persistence:jakarta.persistence-api'
	// Flyway — flyway-mysql 필수(flyway-core 만으로 MySQL 동작 안 함)
	implementation 'org.flywaydb:flyway-core'
	implementation 'org.flywaydb:flyway-mysql'
	// Stage E1: Redis — 캐시=Lettuce, 분산락=Redisson 역할 분담(Redisson 을 캐시 백엔드로 쓰지 않음)
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'  // Lettuce, 캐시/기본 연산
	implementation 'org.springframework.boot:spring-boot-starter-cache'       // Spring Cache 추상화
	// 분산락 전용. starter 대신 코어 라이브러리를 쓴다: redisson-spring-boot-starter 는 커넥션 팩토리를
	// Redisson 으로 교체해 Lettuce 를 밀어내므로("캐시=Lettuce" 규칙 위배), 코어만 넣고 RedissonClient 만 직접 등록.
	implementation 'org.redisson:redisson:3.50.0'
	// Stage E2: 회복탄력성(CircuitBreaker + Retry). Rate limiter 는 앱 레벨 미도입(게이트웨이 담당).
	implementation 'io.github.resilience4j:resilience4j-spring-boot3:2.3.0'
	implementation 'io.github.resilience4j:resilience4j-micrometer:2.3.0'      // 메트릭을 Stage 5 Prometheus 로 노출
	// Stage F1: 보안(JWT 인증 뼈대)
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.6'
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	// Stage 1: 레이어 의존 방향 규율을 test 코드로 강제(ArchUnit)
	testImplementation 'com.tngtech.archunit:archunit-junit5:1.4.1'
	// Stage F2: Testcontainers 기반 통합 테스트(실제 MySQL/Redis, H2 대체 금지). 버전은 BOM 관리.
	testImplementation 'org.springframework.boot:spring-boot-testcontainers'
	testImplementation 'org.testcontainers:junit-jupiter'
	testImplementation 'org.testcontainers:mysql'
	testImplementation 'org.springframework.security:spring-security-test'
	testCompileOnly 'org.projectlombok:lombok'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	testAnnotationProcessor 'org.projectlombok:lombok'
}

tasks.named('test') {
	useJUnitPlatform()
}

// B-020: Checkstyle — Naver 룰셋(스페이스4 커스터마이즈). 위반/경고 시 빌드 실패(maxWarnings=0).
checkstyle {
	// B-021: Java 21 record 파싱 위해 10.20.2 확정(8.24 는 record 파싱 불가). Naver 룰(8.24+)과 호환.
	toolVersion = '10.20.2'
	configFile = file('config/checkstyle/naver-checkstyle-rules.xml')
	configProperties = [suppressionFile: file('config/checkstyle/naver-checkstyle-suppressions.xml')]
	maxWarnings = 0
	// QueryDSL Q타입(build/generated) 위반은 suppressions.xml(전체 경로 매칭)로 제외한다.
}

// B-020: Spotless — Naver eclipse formatter(스페이스4) + import 순서(static→java→javax→org→net→com).
spotless {
	lineEndings = com.diffplug.spotless.LineEnding.UNIX   // [newline-lf] LF 강제(.editorconfig 정합)
	java {
		target 'src/main/java/**/*.java', 'src/test/java/**/*.java'   // build/·생성코드 제외
		eclipse().configFile('config/naver-eclipse-formatter.xml')
		importOrder('\\#', 'java', 'javax', 'org', 'net', 'com')      // '\\#' = static 그룹 먼저
		removeUnusedImports()
		trimTrailingWhitespace()
		endWithNewline()
	}
}

// Stage D: QueryDSL Q클래스 생성 경로를 build/ 하위로 지정(생성물은 커밋 금지 — build/ 는 이미 .gitignore).
def querydslDir = "build/generated/querydsl"
tasks.withType(JavaCompile).configureEach {
	options.encoding = 'UTF-8'   // B-020: 컴파일 인코딩 UTF-8 고정(한국어 주석/메시지 안전).
}
// Q타입 생성은 main 컴파일에서만 querydslDir 로. compileTestJava 까지 이 dir 를 출력으로 선언하면
// main srcDir(=checkstyleMain 입력)과 겹쳐 Gradle 태스크 의존성 검증 실패 → main 한정(B-022).
tasks.named('compileJava') {
	options.generatedSourceOutputDirectory = file(querydslDir)
}
sourceSets {
	main.java.srcDirs += [querydslDir]
}
tasks.named('clean') {
	delete file(querydslDir)
}
